--- a/工具/工具.md
+++ b/工具/工具.md
@@ -1,4 +1,4 @@
-## 常用工具知识总结
+## 常用工具知识与设计模式总结
 
 本部分主要是笔者关于常用工具所做的笔记，如果出现错误，希望大家指出！
 
@@ -9,6 +9,9 @@
     * [2. 经常使用的 git 命令？](#2-经常使用的-git-命令)
     * [3. git pull 和 git fetch 的区别](#3-git-pull-和-git-fetch-的区别)
     * [4. git rebase 和 git merge 的区别](#4-git-rebase-和-git-merge-的区别)
+* [设计模式](#设计模式)设计模式的几大基本原则
+    * [1. 设计模式的几大基本原则](#1-设计模式的几大基本原则)
+
 
 
 ### GIT
@@ -64,3 +67,22 @@
    ```
    [《git rebase 和 git merge 的区别》](https://www.jianshu.com/p/f23f72251abc)
    [《git merge 与 git rebase 的区别》](https://blog.csdn.net/liuxiaoheng1992/article/details/79108233)
+
+### 设计模式
+
+#### 1. 设计模式的几大基本原则
+
+开放封闭原则：对扩展开放，对修改关闭。在程序需要进行拓展的时候，不能去修改原有的代码，实现一个热插拔的效果。
+
+单一职责原则：一个类、接口或方法只负责一个职责，降低代码复杂度以及变更引起的风险。
+
+依赖倒置原则：针对接口编程，依赖于抽象类或接口而不依赖于具体实现类。
+
+接口隔离原则：将不同功能定义在不同接口中实现接口隔离。
+
+里氏替换原则：任何基类可以出现的地方，子类一定可以出现。
+
+迪米特原则：每个模块对其他模块都要尽可能少地了解和依赖，降低代码耦合度。
+
+合成复用原则：尽量使用组合(has-a)/聚合(contains-a)而不是继承(is-a)达到软件复用的目的。
+
