--- a/算法/算法.md
+++ b/算法/算法.md
@@ -74,7 +74,7 @@
       - [12. 如何查找一篇英文文章中出现频率最高的单词？](#12-如何查找一篇英文文章中出现频率最高的单词)
       - [13. 发布订阅模式和手写](#13-发布订阅模式和手写)
       - [14. 节流与防抖](#14-节流与防抖)
-      - [15.字符串数组转数组](#15字符串数组转数组)
+      - [15.字符串数组转数组 (shopee面经原题)](#15字符串数组转数组)
       - [16.深拷贝与浅拷贝](#16深拷贝与浅拷贝)
       - [17.手写 call、apply 及 bind 函数](#17手写-callapply-及-bind-函数)
       - [18.函数柯里化的实现](#18函数柯里化的实现)
@@ -83,6 +83,10 @@
       - [21.new 的实现](#21new-的实现)
       - [22.instanceof 的原理](#22instanceof-的原理)
       - [23.手写一个 Promise](#23手写一个-promise)
+      - [24.分隔符链接的字符串压缩(shopee面经原题)](#24分隔符链接的字符串压缩(shopee面经原题))
+      - [25.根据数字添加括号(shopee面经原题)](#25根据数字添加括号(shopee面经原题))
+      - [26.斐波那契数列多种解法(shopee面经原题)](#26斐波那契数列多种解法(shopee面经原题))
+
 - [常见面试智力题总结](#常见面试智力题总结)
       - [1. 时针与分针夹角度数问题？](#1-时针与分针夹角度数问题)
       - [2. 用3升，5升杯子怎么量出4升水？](#2-用3升5升杯子怎么量出4升水)
@@ -2246,6 +2250,21 @@ function throttle(fn, delay) {
     }
   };
 }
+// 节流
+let inp = document.querySelector("input")
+inp.oninput = debounce(function(){console.log(this)},2000)
+function debounce(fn, delay){
+    let t = null;
+    return function(){
+        if(t!==null){
+            clearTimeout(t)
+        }
+        t = setTimeout(()=>{
+              fn.call(this)
+          }, delay)
+    }
+}
+
 ```
 #### 15.字符串数组转数组
 
@@ -2431,6 +2450,7 @@ call 函数的实现步骤：
 5.使用上下文对象来调用这个方法，并保存返回结果。
 6.删除刚才新增的属性。
 7.返回结果。
+
 apply 函数的实现步骤：
 
 1.判断调用对象是否为函数，即使我们是定义在函数的原型上的，但是可能出现使用 call 等方式调用的情况。
@@ -2440,6 +2460,7 @@ apply 函数的实现步骤：
 4.使用上下文对象来调用这个方法，并保存返回结果。
 5.删除刚才新增的属性
 6.返回结果
+
 bind 函数的实现步骤：
 
 1.判断调用对象是否为函数，即使我们是定义在函数的原型上的，但是可能出现使用 call 等方式调用的情况。
@@ -2760,6 +2781,163 @@ MyPromise.prototype.then = function(onResolved, onRejected) {
 };
 
 ```
+#### 24.分隔符链接的字符串压缩(shopee面经原题)
+```js
+let a = '-important-num-alias-'
+let b = 'internationalization'
+
+function compress(s){
+    let len = s.length
+    let res = []
+    if(len===0) return s
+
+    let words = s.split("-")
+    for(let i = 0;i<words.length;i++){
+        let word = words[i], wordLen = words[i].length
+        if(wordLen < 4){
+            res.push(word)
+        }else{
+            let compressWord = ""
+            compressWord = word[0] + (wordLen - 2) + word[wordLen-1]
+            res.push(compressWord)
+        }
+    }
+    return res.join("-")
+}
+
+console.log(compress(b))
+
+// 方法二：
+function compress(s){
+    let len = s.length
+    let res = ""
+    if(len===0) return s
+
+    let word = ""
+    for(let i=0;i<len;i++){
+        if(s[i] === "-"){
+            if(word.length >= 4){
+                let temp = word[0] + (word.length-2) + word[word.length-1]
+                res += temp
+                word = ""
+            }else{
+                res += word
+                word = ""
+            }
+            res += s[i]
+            continue
+        }else{
+            word += s[i]
+        }
+    }
+    if(word.length >= 4){
+        let temp = word[0] + (word.length-2) + word[word.length-1]
+        res += temp
+        word = ""
+    }else{
+        res += word
+        word = ""
+    }
+    return res
+}
+```
+#### 25.根据数字添加括号(shopee面经原题)
+
+对于输入的字符串处理，添加数字对应数量的括号并输出，并且注意层级。
+样例a: 021 -> 0((2)1)
+样例b: 312 -> (((3))1(2))
+样例c: 0000 -> 0000
+样例d: 101 -> (1)0(1)
+样例e: 111000 -> (111)000
+样例f: 1 -> (1)
+样例g: 221 -> ((22)1)
+
+```js
+function addParenthese(s){
+    let len = s.length
+    if(!len){
+        return ""
+    }
+
+    let stack = [0]
+    for(let i=0;i<len;i++){
+        let stackTop = stack[stack.length - 1], num = s[i]
+        if(num == stackTop){
+            stack.push(num)
+        }else if(num > stackTop){
+            let diff = num - stackTop
+            while(diff > 0){
+                stack.push("(")
+                diff--
+            }
+            stack.push(num)
+        }else if(num < stackTop){
+            let diff = stackTop - num
+            while(diff > 0){
+                stack.push(")")
+                diff--
+            }
+            stack.push(num)
+        }
+    }
+    let stackTop = stack[stack.length - 1]
+    while(stackTop > 0){
+        stack.push(")")
+        stackTop-- 
+    }
+    stack.shift()
+    return stack.join("")
+}
+```
+#### 26.斐波那契数列多种解法(shopee面经原题)
+```js
+//recurrence
+var fib1 = function(n) {
+    if(n===0){return 0}
+    if(n===1){return 1}
+    return fib(n-1) + fib(n-2)
+};
+//iteration
+var fib = function(n) {
+    if(n===0){return 0}
+    if(n===1){return 1}
+    let [res, first, second] = [0, 0, 1]
+    for(let i=2;i<=n;i++){
+        res = first + second
+        first = second
+        second = res
+    }
+    return res
+};
+//DP
+// 常规DP
+const fib = n => {
+    if (n <= 1) return n;
+    const dp = [0, 1];
+    for (let i = 2; i <= n; i++) {
+        dp[i] = dp[i - 1] + dp[i - 2];
+    }
+    return dp[n];
+};
+// 精简DP
+const fib = n => {
+    if (n <= 1) return n;
+    const dp = [0, 1];
+    let sum = null;
+    for (let i = 2; i <= n; i++) {
+        sum = dp[0] + dp[1];
+        dp[0] = dp[1];
+        dp[1] = sum;
+    }
+    return sum;
+};
+```
+
+
+
+
+
+
 # 常见面试智力题总结
 
 #### 1. 时针与分针夹角度数问题？
