--- a/算法/算法.md
+++ b/算法/算法.md
@@ -86,6 +86,8 @@
       - [24.分隔符链接的字符串压缩(shopee面经原题)](#24分隔符链接的字符串压缩(shopee面经原题))
       - [25.根据数字添加括号(shopee面经原题)](#25根据数字添加括号(shopee面经原题))
       - [26.斐波那契数列多种解法(shopee面经原题)](#26斐波那契数列多种解法(shopee面经原题))
+      - [27.如何将浮点数点左边的数每三位添加一个逗号，如 12000000.11 转化为『12,000,000.11』?(shopee面经原题)](#27如何将浮点数点左边的数每三位添加一个逗号)
+      - [28.手写reduce?(shopee面经原题)](#28手写reduce)
 
 - [常见面试智力题总结](#常见面试智力题总结)
       - [1. 时针与分针夹角度数问题？](#1-时针与分针夹角度数问题)
@@ -2250,7 +2252,8 @@ function throttle(fn, delay) {
     }
   };
 }
-// 节流
+// 
+<input></input>
 let inp = document.querySelector("input")
 inp.oninput = debounce(function(){console.log(this)},2000)
 function debounce(fn, delay){
@@ -2264,6 +2267,28 @@ function debounce(fn, delay){
           }, delay)
     }
 }
+// 节流
+<style>body{height:200vh}</style>
+<script> 
+window.onscroll = throttle(()=>{console.log("hello")}, 500)
+function throttle(fn, delay){
+  let flag = true
+  return function(){
+    if(flag){
+      setTimeout(()=>{
+        fn.call(this)
+        flag = true
+      },delay)
+    }
+    flag = false
+  }
+}
+
+</script>
+
+
+
+
 
 ```
 #### 15.字符串数组转数组
@@ -2931,6 +2956,165 @@ const fib = n => {
     }
     return sum;
 };
+```
+#### 27.如何将浮点数点左边的数每三位添加一个逗号
+
+```js
+// 方法一
+function format(number) {
+  return number && number.replace(/(?!^)(?=(\d{3})+\.)/g, ",");
+}
+// 方法二
+function format1(number) {
+  return Intl.NumberFormat().format(number)
+}
+// 方法三
+function format2(number) {
+  return number.toLocaleString('en')
+}
+```
+
+#### 28.手写reduce
+1.常规判断
+这里我们主要要判断的是调用数组、传入参数
+
+
+2.初始化各个变量，为第一次执行函数做准备
+这里我们需要准备的变量有需要传入回调函数的4个参数
+accumulator, currentValue, currentIndex, sourceArray
+
+
+3.开始循环
+同时记得更新几个参数和返回结果
+```js
+Array.prototype.myreduce = function (fn, initialValue) {
+  // 判断调用对象是否为数组
+  if (Object.prototype.toString.call([]) !== '[object Array]') {
+    throw new TypeError('not a array')
+  }
+  // 判断调用数组是否为空数组
+  const sourceArray = this
+  if (sourceArray.length === 0) {
+    throw new TypeError('empty array')
+  }
+  // 判断传入的第一个参数是否为函数
+  if (typeof fn !== 'function') {
+    throw new TypeError(`${fn} is not a function`)
+  }
+
+  // 第二步
+  // 回调函数参数初始化
+  let accumulator, 
+  currentValue,
+  currentIndex;
+  if (initialValue) {
+    accumulator = initialValue
+    currentIndex = 0
+  } else {
+    accumulator = arr[0]
+    currentIndex = 1
+  }
+
+  // 第三步
+  // 开始循环
+  while (currentIndex < sourceArray.length) {
+    if (Object.prototype.hasOwnProperty.call(sourceArray, currentIndex)) {
+      currentValue = sourceArray[currentIndex]
+      accumulator = fn(accumulator, currentValue, currentIndex, sourceArray)
+    }
+    
+    currentIndex++
+  }
+
+  // 第四步
+  // 返回结果
+  return accumulator
+}
+
+
+```
+
+#### 29.根据二维数组构造二叉树，并求它的最长路径和宽度
+```js
+const sourceData = [
+    ["bag", "purse"],
+    ["purse", "hand purse"],
+    ["bag", "backpack"],
+    ["purse", "purse wallet"],
+    ["purse wallet", "coin wallet"],
+    ["purse wallet", "man purse"],
+    ["shoe", "nike shoe"],
+    ];
+    
+    
+    
+    
+    const getDimension = (data)=>{
+        
+        //定义树节点
+        function Treenode(val) {
+            this.val = val
+            this.left = this.right = null
+        }
+    
+        //map记录整体结构，方便树的构建
+        const map = new Map()
+        for(let item of data){
+            if(map.has(item[0])){
+                map.get(item[0]).push(item[1])
+            }else{
+                map.set(item[0],[item[1]])
+            }
+        }
+    
+        //根据map构建树
+        const get_tree = (node) =>{
+            if(map.has(node.val)){
+                let arr = map.get(node.val)
+                map.delete(node.val)
+                node.left = new Treenode(arr[0])
+                get_tree(node.left)
+                if(arr[1])
+                {
+                    node.right = new Treenode(arr[1])
+                    get_tree(node.right)
+                }
+            }
+        }
+        
+        
+        //回溯计算最大深度
+        const back_track = (node,wid)=>{
+            if(node ===null) return wid-1
+            if(node.left === null) {
+                // console.log(depth);
+                depth++
+                return wid
+            }
+            else return Math.max(back_track(node.left,wid+1), back_track(node.right,wid+1))
+        }
+                  
+        let depth = 0
+        let width = 0
+        
+        //循环遍历所有key
+        while(map.size !== 0){
+            // console.log(map);
+            let mapkey_arr = [...map.keys()]
+            const root = new Treenode(mapkey_arr[0])
+            get_tree(root)
+            // console.log(root);
+            let current_width = back_track(root,1) 
+            width = current_width>width ? current_width: width
+        }
+    
+        
+        
+        return [width,depth]
+
+    }
+    
+    console.log(getDimension(sourceData)) //[4,5]
 ```
 
 
