--- a/算法/算法.md
+++ b/算法/算法.md
@@ -88,6 +88,7 @@
       - [26.斐波那契数列多种解法(shopee面经原题)](#26斐波那契数列多种解法(shopee面经原题))
       - [27.如何将浮点数点左边的数每三位添加一个逗号，如 12000000.11 转化为『12,000,000.11』?(shopee面经原题)](#27如何将浮点数点左边的数每三位添加一个逗号)
       - [28.手写reduce?(shopee面经原题)](#28手写reduce)
+      - [29.手写森林?(shopee面经原题)](#29根据二维数组构造二叉树，并求它的最长路径和宽度)
 
 - [常见面试智力题总结](#常见面试智力题总结)
       - [1. 时针与分针夹角度数问题？](#1-时针与分针夹角度数问题)
@@ -2957,7 +2958,7 @@ const fib = n => {
     return sum;
 };
 ```
-#### 27.如何将浮点数点左边的数每三位添加一个逗号
+。#### 27.如何将浮点数点左边的数每三位添加一个逗号
 
 ```js
 // 方法一
