--- a/算法/算法.md
+++ b/算法/算法.md
@@ -89,6 +89,7 @@
       - [27.如何将浮点数点左边的数每三位添加一个逗号，如 12000000.11 转化为『12,000,000.11』?(shopee面经原题)](#27如何将浮点数点左边的数每三位添加一个逗号)
       - [28.手写reduce?(shopee面经原题)](#28手写reduce)
       - [29.手写森林?(shopee面经原题)](#29根据二维数组构造二叉树，并求它的最长路径和宽度)
+      - [30.Zombie in Matrix(shopee面经原题)](#29Zombie in Matrix)
 
 - [常见面试智力题总结](#常见面试智力题总结)
       - [1. 时针与分针夹角度数问题？](#1-时针与分针夹角度数问题)
@@ -3005,6 +3006,7 @@ Array.prototype.myreduce = function (fn, initialValue) {
 
   // 第二步
   // 回调函数参数初始化
+  let arr = this
   let accumulator, 
   currentValue,
   currentIndex;
@@ -3116,6 +3118,101 @@ const sourceData = [
     }
     
     console.log(getDimension(sourceData)) //[4,5]
+```
+
+#### 30.Zombie in Matrix
+```
+Zombie Game
+0: block, 1: healthy people, 2: zombie
+Each zombie can infect adjacent healthy people in 4 adjacent cells (up, down, left, right) every day
+How long does it take to infect all people?
+Example 1:
+Day 0    Day 1    Day 2    Day 3    Day 4
+-----------------------------------------------
+2 1 1    2 2 1    2 2 2    2 2 2    2 2 2
+1 1 0 => 2 1 0 => 2 2 0 => 2 2 0 => 2 2 0
+0 1 1    0 1 1    0 1 1    0 2 1    0 2 2
+Return 4
+
+Example 2:
+Day 0
+------
+2 2 2
+0 2 2
+1 0 2
+Return -1, because the left corner ppl won't be infected
+
+Example 3:
+Day 0
+-----
+0 2
+Return 0, the starting state is all ppl got infected
+```
+题解：
+```js
+// 思路：使用queue+BFS，时空复杂度O(mn)
+// 1. 先定义上下左右四个移动方式
+// 2. 将所有僵尸入队
+// 3. 计算感染的步数并开始感染
+// 4. 如果僵尸紧邻的位置有人，则将其感染为僵尸并入队 
+// 5. 如果有新被感染的人，说明需要感染的次数需要 + 1
+// 6. 如果pCount等于0，说明所有人都被感染了，返回step；否则返回-1
+
+class GridType:
+    WALL = 2
+    ZOMBIE = 1
+    HUMAN = 0
+
+DIRECTIONS = [(0, 1), (1, 0), (0, -1), (-1, 0)]
+
+class Solution:
+    """
+    @param grid: a 2D integer grid
+    @return: an integer
+    """
+    def zombie(self, grid):
+        if not grid or not grid[0]:
+            return 0
+        
+        queue = collections.deque([])
+        visited = set()
+
+        human = 0
+        for i in range(len(grid)):
+            for j in range(len(grid[0])):
+                if grid[i][j] == GridType.ZOMBIE:
+                    queue.append((i, j))
+                    visited.add((i, j))
+                if grid[i][j] == GridType.HUMAN:
+                    human += 1
+        
+        day = 0
+        while queue:
+            day += 1
+            for _ in range(len(queue)):
+                x, y = queue.popleft()
+                for dx, dy in DIRECTIONS:
+                    adj_x, adj_y = x + dx, y + dy
+                    if not self.is_valid(adj_x, adj_y, grid):
+                        continue
+                    if (adj_x, adj_y) in visited:
+                        continue
+                    if grid[adj_x][adj_y] == GridType.HUMAN:
+                        grid[adj_x][adj_y] = 1
+                        human -= 1
+                        queue.append((adj_x, adj_y))
+                        visited.add((adj_x, adj_y))
+        
+        if human != 0:
+            return -1 
+        return day - 1 
+
+    def is_valid(self, x, y, grid):
+        if not (0 <= x < len(grid) and 0 <= y < len(grid[0])):
+            return False
+        if grid[x][y] == GridType.WALL:
+            return False 
+        return True 
 ```
 
 
