--- a/算法/算法.md
+++ b/算法/算法.md
@@ -4,182 +4,9 @@
 
 ## 目录
 
-- [算法知识总结](#算法知识总结)
-  - [目录](#目录)
-- [常用算法和数据结构总结](#常用算法和数据结构总结)
-  - [排序](#排序)
-    - [冒泡排序](#冒泡排序)
-    - [选择排序](#选择排序)
-    - [插入排序](#插入排序)
-    - [希尔排序](#希尔排序)
-    - [归并排序](#归并排序)
-    - [快速排序](#快速排序)
-    - [堆排序](#堆排序)
-    - [基数排序](#基数排序)
-    - [快速排序相对于其他排序效率更高的原因](#快速排序相对于其他排序效率更高的原因)
-    - [系统自带排序实现](#系统自带排序实现)
-    - [稳定性](#稳定性)
-    - [排序面试题目总结](#排序面试题目总结)
-  - [树](#树)
-    - [二叉树相关性质](#二叉树相关性质)
-    - [满二叉树](#满二叉树)
-    - [完全二叉树](#完全二叉树)
-    - [平衡二叉查找树（AVL）](#平衡二叉查找树avl)
-    - [B-树](#b-树)
-    - [B+树](#b树)
-    - [数据库索引](#数据库索引)
-    - [红黑树](#红黑树)
-    - [Huffman 树](#huffman-树)
-    - [二叉查找树](#二叉查找树)
-    - [求解二叉树中两个节点的最近公共祖先节点](#求解二叉树中两个节点的最近公共祖先节点)
-  - [链表](#链表)
-    - [反转单向链表](#反转单向链表)
-  - [动态规划](#动态规划)
-    - [爬楼梯问题](#爬楼梯问题)
-      - [递归方法分析](#递归方法分析)
-      - [备忘录方法](#备忘录方法)
-      - [迭代法](#迭代法)
-  - [经典面试题](#经典面试题)
-      - [1. flex：1 - 1 1 0%](#1-flex1---1-1-0)
-      - [2. 什么是闭包](#2-什么是闭包)
-      - [3.异步方式](#3异步方式)
-      - [4.CSRF & XSS](#4csrf--xss)
-      - [5.js动画为什么比css的transform要慢](#5js动画为什么比css的transform要慢)
-      - [6.Http和Https区别](#6http和https区别)
-      - [7.TCP三次握手和四次挥手](#7tcp三次握手和四次挥手)
-      - [8.TLS握手](#8tls握手)
-      - [9.对称加密和非对称加密（RSA）](#9对称加密和非对称加密rsa)
-      - [10.中间人攻击问题](#10中间人攻击问题)
-      - [11.DNS协议](#11dns协议)
-      - [12.UDP协议](#12udp协议)
-      - [13.当你在浏览器中输入 Google.com 并且按下回车之后发生了什么？](#13当你在浏览器中输入-googlecom-并且按下回车之后发生了什么)
-      - [14.什么是 MVVM？比之 MVC 有什么区别？什么又是 MVP ？](#14什么是-mvvm比之-mvc-有什么区别什么又是-mvp-)
-      - [15.vue 双向数据绑定原理？](#15vue-双向数据绑定原理)
-      - [16.CROS跨域](#16cros跨域)
-      - [17. Cookie与Session的区别和联系还有Token](#17-cookie与session的区别和联系还有token)
-      - [18.Vue 的各个生命阶段是什么？](#18vue-的各个生命阶段是什么)
-      - [19.箭头函数和普通函数有什么区别？](#19箭头函数和普通函数有什么区别)
-  - [经典笔试题](#经典笔试题)
-      - [1. js 实现一个函数，完成超过范围的两个大整数相加功能](#1-js-实现一个函数完成超过范围的两个大整数相加功能)
-      - [2. js 如何实现数组扁平化？](#2-js-如何实现数组扁平化)
-      - [3. js 如何实现数组去重？](#3-js-如何实现数组去重)
-      - [4. 如何求数组的最大值和最小值？](#4-如何求数组的最大值和最小值)
-      - [5. 如何求两个数的最大公约数？](#5-如何求两个数的最大公约数)
-      - [6. 如何求两个数的最小公倍数？](#6-如何求两个数的最小公倍数)
-      - [7. 实现 IndexOf 方法？](#7-实现-indexof-方法)
-      - [8. 判断一个字符串是否为回文字符串？](#8-判断一个字符串是否为回文字符串)
-      - [9. 实现一个累加函数的功能比如 sum(1,2,3)(2).valueOf()](#9-实现一个累加函数的功能比如-sum1232valueof)
-      - [10. 使用 reduce 方法实现 forEach、map、filter](#10-使用-reduce-方法实现-foreachmapfilter)
-      - [11. 设计一个简单的任务队列，要求分别在 1,3,4 秒后打印出 "1", "2", "3"](#11-设计一个简单的任务队列要求分别在-134-秒后打印出-1-2-3)
-      - [12. 如何查找一篇英文文章中出现频率最高的单词？](#12-如何查找一篇英文文章中出现频率最高的单词)
-      - [13. 发布订阅模式和手写](#13-发布订阅模式和手写)
-      - [14. 节流与防抖](#14-节流与防抖)
-      - [15.字符串数组转数组 (shopee面经原题)](#15字符串数组转数组)
-      - [16.深拷贝与浅拷贝](#16深拷贝与浅拷贝)
-      - [17.手写 call、apply 及 bind 函数](#17手写-callapply-及-bind-函数)
-      - [18.函数柯里化的实现](#18函数柯里化的实现)
-      - [19.手写一个 jsonp](#19手写一个-jsonp)
-      - [20.使用闭包实现每隔一秒打印 1,2,3,4](#20使用闭包实现每隔一秒打印-1234)
-      - [21.new 的实现](#21new-的实现)
-      - [22.instanceof 的原理](#22instanceof-的原理)
-      - [23.手写一个 Promise](#23手写一个-promise)
-      - [24.分隔符链接的字符串压缩(shopee面经原题)](#24分隔符链接的字符串压缩(shopee面经原题))
-      - [25.根据数字添加括号(shopee面经原题)](#25根据数字添加括号(shopee面经原题))
-      - [26.斐波那契数列多种解法(shopee面经原题)](#26斐波那契数列多种解法(shopee面经原题))
-      - [27.如何将浮点数点左边的数每三位添加一个逗号，如 12000000.11 转化为『12,000,000.11』?(shopee面经原题)](#27如何将浮点数点左边的数每三位添加一个逗号)
-      - [28.手写reduce?(shopee面经原题)](#28手写reduce)
-      - [29.手写森林?(shopee面经原题)](#29根据二维数组构造二叉树，并求它的最长路径和宽度)
-      - [30.Zombie in Matrix(shopee面经原题)](#29Zombie in Matrix)
+[toc]
 
-- [常见面试智力题总结](#常见面试智力题总结)
-      - [1. 时针与分针夹角度数问题？](#1-时针与分针夹角度数问题)
-      - [2. 用3升，5升杯子怎么量出4升水？](#2-用3升5升杯子怎么量出4升水)
-      - [3. 四个药罐中有一个浑浊的药罐，浑浊的每片药片都比其他三个干净的药罐多一克，如何只用一次天平找出浑浊的药罐？](#3-四个药罐中有一个浑浊的药罐浑浊的每片药片都比其他三个干净的药罐多一克如何只用一次天平找出浑浊的药罐)
-      - [4. 四张卡片，卡片正面是数字，反面是字母。现在桌上四张卡片，状态为 a 1 b 2 现在我想要证明 a 的反面必然是 1 ，我只能翻两张牌，我翻哪两张？](#4-四张卡片卡片正面是数字反面是字母现在桌上四张卡片状态为-a-1-b-2-现在我想要证明-a-的反面必然是-1-我只能翻两张牌我翻哪两张)
-      - [5. 赛马问题，25 匹马，5 个赛道，最少几次能选出最快的三匹马？](#5-赛马问题25-匹马5-个赛道最少几次能选出最快的三匹马)
-      - [6. 五队夫妇参加聚会，每个人不能和自己的配偶握手，只能最多和他人握手一次。A问了其他人，发现每个人的握手次数都不同，那么A的配偶握手了几次？](#6-五队夫妇参加聚会每个人不能和自己的配偶握手只能最多和他人握手一次a问了其他人发现每个人的握手次数都不同那么a的配偶握手了几次)
-      - [7. 你只能带行走 60 公里的油，只能在起始点加油，如何穿过 80 公里的沙漠？](#7-你只能带行走-60-公里的油只能在起始点加油如何穿过-80-公里的沙漠)
-      - [8. 烧一根不均匀的绳要用一个小时，如何用它来判断一个小时十五分钟？](#8-烧一根不均匀的绳要用一个小时如何用它来判断一个小时十五分钟)
-      - [9. 有7克、2克砝码各一个，天平一只，如何只用这些物品三次将140克的盐分成50、90克各一份？](#9-有7克2克砝码各一个天平一只如何只用这些物品三次将140克的盐分成5090克各一份)
-      - [10. 有一辆火车以每小时15公里的速度离开洛杉矶直奔纽约，另一辆火车以第 小时20公里的速度从纽约开往洛杉矶。如果有一只鸟，以外30公里每小时的速度和 两辆火车现时启动，从洛杉矶出发，碰到另辆车后返回，依次在两辆火车来回的飞行，直道两面辆火车相遇，请问，这只小鸟飞行了多长距离？](#10-有一辆火车以每小时15公里的速度离开洛杉矶直奔纽约另一辆火车以第小时20公里的速度从纽约开往洛杉矶如果有一只鸟以外30公里每小时的速度和两辆火车现时启动从洛杉矶出发碰到另辆车后返回依次在两辆火车来回的飞行直道两面辆火车相遇请问这只小鸟飞行了多长距离)
-      - [11. 你有两个罐子，50个红色弹球，50个蓝色弹球，随机选出一个罐子，随机选取出一个弹球放入罐子，怎么给红色弹球最大的选中机会？在你的计划中，得到红球的准确几率是多少？](#11-你有两个罐子50个红色弹球50个蓝色弹球随机选出一个罐子随机选取出一个弹球放入罐子怎么给红色弹球最大的选中机会在你的计划中得到红球的准确几率是多少)
-      - [12. 假设你有8个球，其中一个略微重一些，但是找出这个球的惟一方法是将两个球放在天平上对比。最少要称多少次才能找出这个较重的球？](#12-假设你有8个球其中一个略微重一些但是找出这个球的惟一方法是将两个球放在天平上对比最少要称多少次才能找出这个较重的球)
-      - [13. 在房里有三盏灯，房外有三个开关，在房外看不见房内的情况，你只能进门一次，你用什么方法来区分那个开关控制那一盏灯？](#13-在房里有三盏灯房外有三个开关在房外看不见房内的情况你只能进门一次你用什么方法来区分那个开关控制那一盏灯)
-      - [14. 他们都各自买了两对黑袜和两对白袜，八对袜子的布质、大小完全相同，而每对袜子都有一张商标纸连着。两位盲人不小心将八对袜子混在一起。他们每人怎样才能取回黑袜和白袜各两对呢？](#14-他们都各自买了两对黑袜和两对白袜八对袜子的布质大小完全相同而每对袜子都有一张商标纸连着两位盲人不小心将八对袜子混在一起他们每人怎样才能取回黑袜和白袜各两对呢)
-      - [15. 有三筐水果，一筐装的全是苹果，第二筐装的全是橘子，第三筐是橘子与苹果混在一起。筐上的标签都是骗人的，（就是说筐上的标签都是错的）你的任务是拿出其中一筐，从里面只拿一只水果，然后正确写出三筐水果的标签。](#15-有三筐水果一筐装的全是苹果第二筐装的全是橘子第三筐是橘子与苹果混在一起筐上的标签都是骗人的就是说筐上的标签都是错的你的任务是拿出其中一筐从里面只拿一只水果然后正确写出三筐水果的标签)
-      - [16. 一个班级60%喜欢足球，70%喜欢篮球，80%喜欢排球，问即三种球都喜欢占比有多少？](#16-一个班级60喜欢足球70喜欢篮球80喜欢排球问即三种球都喜欢占比有多少)
-      - [17. 五只鸡五天能下五个蛋，一百天下一百个蛋需要多少只鸡？](#17-五只鸡五天能下五个蛋一百天下一百个蛋需要多少只鸡)
-- [剑指 offer 思路总结](#剑指-offer-思路总结)
-  - [题目](#题目)
-      - [1. 二维数组中的查找](#1-二维数组中的查找)
-      - [2. 替换空格](#2-替换空格)
-      - [3. 从尾到头打印链表](#3-从尾到头打印链表)
-      - [4. 重建二叉树](#4-重建二叉树)
-      - [5. 用两个栈实现队列](#5-用两个栈实现队列)
-      - [6. 旋转数组的最小数字](#6-旋转数组的最小数字)
-      - [7. 斐波那契数列](#7-斐波那契数列)
-      - [8. 跳台阶](#8-跳台阶)
-      - [9. 变态跳台阶](#9-变态跳台阶)
-      - [10. 矩形覆盖](#10-矩形覆盖)
-      - [11. 二进制中1的个数](#11-二进制中1的个数)
-      - [12. 数值的整数次方](#12-数值的整数次方)
-      - [13. 调整数组顺序使奇数位于偶数前面](#13-调整数组顺序使奇数位于偶数前面)
-      - [14. 链表中倒数第 k 个节点](#14-链表中倒数第-k-个节点)
-      - [15. 反转链表](#15-反转链表)
-      - [16. 合并两个排序的链表](#16-合并两个排序的链表)
-      - [17. 树的子结构](#17-树的子结构)
-      - [18. 二叉树的镜像](#18-二叉树的镜像)
-      - [19. 顺时针打印矩阵](#19-顺时针打印矩阵)
-      - [20. 定义一个栈，实现 min 函数](#20-定义一个栈实现-min-函数)
-      - [21. 栈的压入弹出](#21-栈的压入弹出)
-      - [22. 从上往下打印二叉树](#22-从上往下打印二叉树)
-      - [23. 二叉搜索树的后序遍历](#23-二叉搜索树的后序遍历)
-      - [24. 二叉树中和为某一值路径](#24-二叉树中和为某一值路径)
-      - [25. 复杂链表的复制](#25-复杂链表的复制)
-      - [26. 二叉搜索树与双向链表](#26-二叉搜索树与双向链表)
-      - [27. 字符串的排列](#27-字符串的排列)
-      - [28. 数组中出现次数超过一半的数字](#28-数组中出现次数超过一半的数字)
-      - [29. 最小的 K 个数](#29-最小的-k-个数)
-      - [30. 连续子数组的最大和](#30-连续子数组的最大和)
-      - [31. 整数中1出现的次数（待深入理解）](#31-整数中1出现的次数待深入理解)
-      - [32. 把数组排成最小的数](#32-把数组排成最小的数)
-      - [33. 丑数（待深入理解）](#33-丑数待深入理解)
-      - [34. 第一个只出现一次的字符](#34-第一个只出现一次的字符)
-      - [35. 数组中的逆序对](#35-数组中的逆序对)
-      - [36. 两个链表的第一个公共结点](#36-两个链表的第一个公共结点)
-      - [37. 数字在排序数组中出现的次数](#37-数字在排序数组中出现的次数)
-      - [38. 二叉树的深度](#38-二叉树的深度)
-      - [39. 平衡二叉树](#39-平衡二叉树)
-      - [40. 数组中只出现一次的数字](#40-数组中只出现一次的数字)
-      - [41. 和为 S 的连续正数序列](#41-和为-s-的连续正数序列)
-      - [42. 和为 S 的两个数字](#42-和为-s-的两个数字)
-      - [43. 左旋转字符串](#43-左旋转字符串)
-      - [44. 翻转单词顺序列](#44-翻转单词顺序列)
-      - [45. 扑克牌的顺子](#45-扑克牌的顺子)
-      - [46. 圆圈中最后剩下的数字（约瑟夫环问题）](#46-圆圈中最后剩下的数字约瑟夫环问题)
-      - [47. 1+2+3+...+n](#47-123n)
-      - [48. 不用加减乘除做加法](#48-不用加减乘除做加法)
-      - [49. 把字符串转换成整数。](#49-把字符串转换成整数)
-      - [50. 数组中重复的数字](#50-数组中重复的数字)
-      - [51. 构建乘积数组](#51-构建乘积数组)
-      - [52. 正则表达式的匹配](#52-正则表达式的匹配)
-      - [53. 表示数值的字符串](#53-表示数值的字符串)
-      - [54. 字符流中第一个不重复的字符](#54-字符流中第一个不重复的字符)
-      - [55. 链表中环的入口结点](#55-链表中环的入口结点)
-      - [56. 删除链表中重复的结点](#56-删除链表中重复的结点)
-      - [57. 二叉树的下一个结点](#57-二叉树的下一个结点)
-      - [58. 对称二叉树](#58-对称二叉树)
-      - [59. 按之字形顺序打印二叉树（待深入理解）](#59-按之字形顺序打印二叉树待深入理解)
-      - [60. 从上到下按层打印二叉树，同一层结点从左至右输出。每一层输出一行。](#60-从上到下按层打印二叉树同一层结点从左至右输出每一层输出一行)
-      - [61. 序列化二叉树（待深入理解）](#61-序列化二叉树待深入理解)
-      - [62. 二叉搜索树的第 K 个节点](#62-二叉搜索树的第-k-个节点)
-      - [63. 数据流中的中位数（待深入理解）](#63-数据流中的中位数待深入理解)
-      - [64. 滑动窗口中的最大值（待深入理解）](#64-滑动窗口中的最大值待深入理解)
-      - [65. 矩阵中的路径（待深入理解）](#65-矩阵中的路径待深入理解)
-      - [66. 机器人的运动范围（待深入理解）](#66-机器人的运动范围待深入理解)
-  - [相关算法题](#相关算法题)
-      - [1. 明星问题](#1-明星问题)
-      - [2. 正负数组求和](#2-正负数组求和)
+
 
 # 常用算法和数据结构总结
 
@@ -1971,7 +1798,7 @@ Vue 一共有8个生命阶段，分别是创建前、创建后、加载前、加
    ```
    详细资料可以参考：
    [《JavaScript专题之数组去重》](https://github.com/mqyqingfeng/Blog/issues/27)
-  
+
 #### 4. 如何求数组的最大值和最小值？
    ```js
    var arr = [6, 4, 1, 8, 2, 11, 23];
@@ -3121,6 +2948,7 @@ const sourceData = [
 ```
 
 #### 30.Zombie in Matrix
+
 ```
 Zombie Game
 0: block, 1: healthy people, 2: zombie
@@ -3217,13 +3045,53 @@ class Solution:
 
 
 
+#### 31. sum柯里化
+
+```js
+sum(1, 2, 3).sumOf(); //6
+sum(2, 3)(2).sumOf(); //7
+sum(1)(2)(3)(4).sumOf(); //10
+sum(2)(4, 1)(2).sumOf(); //9
+
+function sum(){
+  let args = [...arguments]
+  let addr = function () {
+    if(arguments.length > 0){
+      args.push(...arguments)
+      return addr
+    }else{
+      return args.reduce((a,b)=>a+b)
+    }   
+  }
+  // addr.sumOf = function() { 
+  //   return args.reduce((a,b)=>a+b)
+  // }
+  return addr
+}
+
+console.log(sum(2)(4, 1)(2)())
+
+
+//高阶函数
+function fixCurry(fn, totalArgs) {  // 函数的长度就是定义形参的个数  
+    totalArgs = totalArgs || fn.length; //如果不传参就设置为函数传参的个数      
+    return function recall() {    
+        return arguments.length < totalArgs //比较传入参数的个数与设置的参数个数是否相等      
+            ? recall.bind(this, ...arguments) //不等就继续recall函数添加参数      
+        : fn.call(this, ...arguments); //相等就执行函数，然后返回结果  
+    };
+}
+let sum = fixCurry((a, b, c) => a + b + c) //返回的是recall函数
+console.log(sum(1,2,3)) // console.log(sum(1)(2,3) === sum(1,2)(3)) //true
+```
+
 
 
 
 # 常见面试智力题总结
 
 #### 1. 时针与分针夹角度数问题？
-   
+
    分析：
    ```
    当时间为 m 点 n 分时，其时针与分针夹角的度数为多少？
@@ -3241,7 +3109,7 @@ class Solution:
    ```
    因此时针与分针的夹角度数为 |m * 30 + n * 0.5 - n * 6|; 
    ```
-  
+
    详细资料参考：
    [《面试智力题 — 时针与分针夹角度数问题》](https://blog.csdn.net/prstaxy/article/details/22210829)
 
@@ -3377,7 +3245,7 @@ class Solution:
     对应水果标签的筐的标签改为另一种水果。
 
     另一种水果标签的框改为混合。
-   ``` 
+   ```
 
 #### 16. 一个班级60%喜欢足球，70%喜欢篮球，80%喜欢排球，问即三种球都喜欢占比有多少？
    ```
@@ -3393,7 +3261,7 @@ class Solution:
    ```
     五只鸡五天能下五个蛋，平均下来五只鸡每天能下一个蛋，因此五只鸡一百天就能够下一百个蛋。
    ```
-    
+
    更多的智力题可以参考：
    [《经典面试智力题200+题和解答》](https://blog.csdn.net/hilyoo/article/details/4445858)
 
@@ -4069,7 +3937,7 @@ class Solution:
         的就是落单的数字。如果是两个数只出现了一次的话，那么最后剩下的就是这两个数异或的结果。这个结果中的1表示的是 A 和
         B 不同的位。我们取异或结果的第一个1所在的位数，假如是第3位，接着通过比较第三位来将数组分为两组，相同数字一定会
         被分到同一组。分组完成后再按照依次异或的思路，求得剩余数字即为两个只出现一次的数字。
-   ``` 
+   ```
 
 #### 41. 和为 S 的连续正数序列
    ```
@@ -4238,7 +4106,7 @@ class Solution:
         交换。如果对应的下标值上已经是正确的值了，那么说明当前元素是一个重复数字。这一种方法相对于上一种方法来说不需要
         额外的内存空间。
    ```
-    
+
 #### 51. 构建乘积数组
    ```
     题目：
@@ -4258,7 +4126,7 @@ class Solution:
           将乘积分为前后两个部分，分别循环求出后，再进行相乘。
 
     （2）上面的方法需要额外的内存空间，我们可以引入中间变量的方式，来降低空间复杂度。（待深入理解）
-   ``` 
+   ```
    详细资料可以参考：
    [《构建乘积数组》](https://zhuanlan.zhihu.com/p/34804711)
 
