--- a/面试记录/面试记录2022.md
+++ b/面试记录/面试记录2022.md
@@ -19,7 +19,7 @@
 13. 代码题：手写 promise.all
 14. 代码题：实现二叉树非递归前序遍历（自定义树的结构和测试用例）
 
-### 爱奇艺笔试 100min
+### 爱奇艺笔试 100min 8.01
 
 选择题 20
 
@@ -108,3 +108,384 @@
   ```
 
   
+
+### 字节 懂车帝 一面 50 mins 8.02
+
+1. 自我介绍
+
+2. 介绍项目
+
+3. 有什么难点
+
+4. 手写：防抖 & 节流 
+
+5. let var const 区别和使用场景，是否可替换
+
+6. vue 的data为什么要用函数返回对象（重名组件data冲突）
+
+7. vue路由实现 hash，history - 不会..
+
+8. 如何在vue种调用dom api，除了 $refs 呢 - 不会
+
+9. $nextTick()​ 作用和实现 - 不会
+
+10. 手写：函数柯里化 
+
+    ```js
+    // sum(1, 2, 3).sumOf(); //6
+    // sum(2, 3)(2).sumOf(); //7
+    // sum(1)(2)(3)(4).sumOf(); //10
+    // sum(2)(4, 1)(2).sumOf(); //9
+    
+    function sum(){
+      let args = [...arguments]
+      let addr = function () {
+        if(arguments.length > 0){
+          args.push(...arguments)
+          return addr
+        }else{
+          return args.reduce((a,b)=>a+b,0)
+        }
+      }
+      addr.sumOf = function() { 
+        return args.reduce((a,b)=>a+b,0)
+      }
+      return addr
+    }
+    console.log(sum(2)(4, 1)(2)())
+    
+    ```
+
+    
+
+### 字节 懂车帝 二面 55 mins 8.10
+
+- 自我介绍
+
+- 个人问题
+
+- 介绍项目
+
+- 为什么使用SSR，那部分用客户端渲染，哪部分用服务端渲染
+
+- 为什么学习前端
+
+- 为什么选择Vue而不是React
+
+- 前端SEO方法
+
+- 为什么选择GraphQL而不是Restful api
+
+- get 和 post 区别
+
+- BFC的理解，和触发BFC的方式，自带BFC的HTML tag
+
+- this.$nextTick() 的理解
+
+- 0.1 + 0.2 === 0.3 ？ 
+
+- 为什么data是个函数而不是对象
+
+- 重绘和回流
+
+- 输出题一：变量提升
+
+  ```js
+  function test() {
+     console.log(a)
+     console.log(foo())   
+     var a = 1
+     function foo() {
+        return 2
+     }
+  }
+  var a = 3
+  test()
+  // undefined 2
+  ```
+
+  
+
+- 输出题二：setTimeout()
+
+  ```js
+  console.log('Hello World!');
+  
+  setTimeout(function() {
+      setTimeout(function() { console.log(1) }, 100)
+      console.log(2)
+      setTimeout(function() { console.log(3) }, 0)
+  }, 0)
+  setTimeout(function () {
+      console.log(4)
+  }, 100) // 进阶：改为101呢？
+  console.log(5)
+  
+  // 5, 2, 3, 4, 1
+  ```
+
+- 代码题： AbC -> aBc  大小写互相转化
+
+  ```js
+  // A 65 a 97
+  function test(s){
+      if(!s) return ""
+      let res = []
+      for(let i in s){
+          let ascii = s[i].charCodeAt()
+          if(ascii < 97) {
+              res.push(String.fromCharCode(ascii + 32))
+          }else{
+              res.push(String.fromCharCode(ascii - 32))
+          }
+      }
+      return res.join("")
+  }
+  let a = "AbC"
+  console.log(test(a))
+  ```
+
+  
+
+### 猿辅导一面 8.03 1h
+
+
+
+1. 自我介绍（没让介绍项目）
+
+2. 学习前端有多久，为什么想做前端
+
+3. 上来两道代码题
+
+   - 手写 instanceOf
+
+   - 计算对象的大小 Bytes
+
+     ```js
+     function roughSizeOfObject( object ) {
+     
+       var objectList = [];
+       var stack = [ object ];
+       var bytes = 0;
+     
+       while ( stack.length ) {
+           var value = stack.pop();
+     
+           if ( typeof value === 'boolean' ) {
+               bytes += 4;
+           }
+           else if ( typeof value === 'string' ) {
+               bytes += value.length * 2;
+           }
+           else if ( typeof value === 'number' ) {
+               bytes += 8;
+           }
+           else if
+           (
+               typeof value === 'object' && objectList.indexOf( value ) === -1
+           )
+           {
+               objectList.push( value );
+               for( var i in value ) {
+                   stack.push( value[ i ] );
+               }
+           }
+       }
+       return bytes;
+     }
+     ```
+
+     - 后续问题：
+     - 1. 不同类型的字节数， 为什么明明1bit就能解决boolean要用4 bytes
+       2. 考虑相同的value引用
+       3. 判断是否有环
+       4. 口述如何输出环 eg：a -> b -> c-> d ->b ->e 输出： b -> c-> d ->b （Webpack有这种算法的应用，import）
+       5. js 怎么保存二进制数据的 - 说到了Blob，其他不会（应该有ArrayBuffer等）
+
+4. 进程 和 线程
+
+   - CPU如何操纵线程的 - 不会。。
+
+   - 进程间通讯
+
+   - 线程间通讯
+
+   - 死锁，和解决方法
+
+   - 用过多线程语言吗？没。。Go这种吧，提到了mpi
+
+   - 多线程语言和 js 的Event Loop有什么优劣
+
+     ```
+     多线程
+     优点：充分利用 CPU 资源，提高效率。
+     缺点：增加了更多的消耗（线程调度管理等）；增加了复杂度用来保证线程之间同步。
+     
+     单线程：目的：dom树不能被一个以上的程序同时操作，因为可能会引发未知的错误。
+     
+     优点：开销小；复杂度低；资源共享性好。消除了创建和销毁线程的开销；
+     将不同的任务分配给不同的线程，等待返回结果执行即可。所以处理速度超级快，有很高的实时性。
+     适合处理高并发：RESTful Api动辄发起成千上万条请求，但是请求本身并没有太多的计算量，开启多线程处理等待结果又太浪费机器性能。所以事件循环非常适合处理此种场景。
+     适合处理少量业务逻辑：例如浏览器中，在处理用户交互事件，页面渲染等少量业务逻辑的场景上，具有很好实时性，能给用户提供很流畅的体验。
+     
+     缺点：一个线程崩溃，整个程序崩溃；高负载下上下文切换开销大。
+     不适合cpu密集型应用：因为JavaScript单线程的设计，因此，对于高强度运算的任务，可能会因为运算能力有限，导致任务处理时间过长，影响后续任务执行。
+     解决办法： 将单个cpu密集型任务拆成多个子任务，留出一定时间间隔执行其他任务。
+     cpu利用率低：因为单线程的原因，cpu多核性能利用率低。
+     解决办法： 1.开启宿主提供的多线程功能。 2. 如果在node端，通过nginx代理，同时开启多个node进程进行处理。
+     安全性低：因为单线程的原因，如果主线程发生错误，将直接导致应用崩溃
+     ```
+
+### 猿辅导二面 8.09 1h
+
+- 面试官人不错，就是似笑非笑，每当我回答问题后都笑一下不知道是奚落还是啥哈哈，人还是不错的，就是表情有点怪异
+
+- 自我介绍
+
+- 项目的主要难点
+
+- 怎么学习的前端
+
+- 从输入url到显示界面（还需要再看看，多加点细节）
+
+- 对 Hybrid 的理解
+
+- `<script>`会阻塞渲染吗？解决方法：defer，async，区别
+
+- 重绘和回流，什么情况下会触发重回和回流（CSSOM tree结构发生变化）
+
+- 隐藏dom节点的方式有什么区别 - display:none; visibility:hidden; opacity: 0 区别
+
+- SPA 和 SSR 大概实现（我忘了MPA了），优劣势比较
+
+- Vue 和 React 区别，你倾向于用哪个
+
+- Vue的双向绑定原理，有没有发生data变化没触发重新渲染的情况
+
+- Vue 的this.$set (没用过)
+
+- 代码题一：css
+
+- ![img](https://uploadfiles.nowcoder.com/files/20210809/0_1628492296320/1628492296180.png)
+
+  ```js
+  <div id="container">
+      <div id="left"></div>
+      <div id="right">
+          <p><p>
+          <p><p>
+          <p><p>
+      </div>  
+  <div>
+          
+          
+  // css
+  #container {
+      display: flex;
+  }
+  #left {
+      width: 200px;
+      height: 100px;
+  }   
+  
+  #right {
+      flex: 1;
+      display:flex;
+      flex-direction:column;
+      justify-content:space-between;
+  }
+  ```
+
+  
+
+  还可以用还有什么方法：float，table-cell
+
+- flex:1 的含义
+
+- float 用过没？为什么要清除float，不清除有什么影响（正常文档流）
+
+- 代码题二：生成10 - 100随机数并排序 http://www.hangge.com/blog/cache/detail_1872.html
+
+  ```js
+  function randomFunction(){
+      let res = []
+      while(res.length < 10){
+          let num = Math.random() * 90
+          let newNum = parseInt(num+10)
+          res.push(newNum)    
+      }
+      return res.sort((a,b)=>a-b)    
+  }
+  
+  console.log(randomFunction())
+  ```
+
+  
+
+### Tictok global live 一面 8.04 16:00 - 17:00
+
+
+
+- 自我介绍
+
+- 问了问项目
+
+- 为啥学前端
+
+- 三道题 
+
+- ```js
+  //1. 时针分针夹角
+  //2. const haystack =[1, 4, [5,6,7,[8, 18, [34,177,[98,[210,[213]]]]]]]; const needle = 213;
+  // 查找目标是否在数组中
+  function search(needle, haystack) {
+     let list = haystack
+      for(let i = 0;i<list.length;i++){
+          if(list[i] === needle){
+              return true
+          }
+          if(typeof list[i] === 'object'){
+              return search(needle, list[i])
+          }
+      }
+      console.log(list)   
+      return false
+  }
+  const haystack =[1, 4, [5,6,7,[8, 18, [34,177,[98,[210,[213]]]]]]];
+  const needle = 213;
+  //3. '5 + 4 - 3' => 6
+  function calcStr(str) {
+      let array = str.split(" ")
+      let init = 0 
+      // true -> +, false -> -
+      let operator = true
+      for(let i = 0;i<array.length;i++){
+          if(array[i] === "+"){
+              operator = true
+          } else if(array[i] === "-"){
+              operator = false
+          } else{
+              console.log(init,operator,array[i])
+              if(operator){
+                  init += +array[i]
+              }else{
+                  let temp = +array[i]
+                  init -= temp
+              }
+          }    
+      }
+      return init
+  }
+  let test = '5 + 4 - 3'
+  console.log(calcStr(test))
+  ```
+
+  
+
+### 用友 一面 8.06 7:30-8.10pm
+
+- 自我介绍
+- 项目介绍
+- 为啥学前端
+- 等等
+- 基本都是唠嗑，没啥技术问题
