--- a/前端面试小册 - 掘金/11浏览器缓存机制.md
+++ b/前端面试小册 - 掘金/11浏览器缓存机制.md
@@ -131,7 +131,7 @@ Cache-control: max-age=30
 但是 `Last-Modified` 存在一些弊端：
 
 
-- 如果本地打开缓存文件，即使没有对文件进行修改，但还是会造成 `Last-Modified` 被修改，服务端不能命中缓存导致发送相同的资源
+- 如果本地打开缓存文件或服务端重复生成相同的文件，即使没有对文件进行修改，但还是会造成 `Last-Modified` 被修改，服务端不能命中缓存导致发送相同的资源
 - 因为 `Last-Modified` 只能以秒计时，如果在不可感知的时间内修改完成文件，那么服务端会认为资源还是命中了，不会返回正确的资源
 
 因为以上这些弊端，所以在 HTTP / 1.1 出现了 `ETag` 。
