--- a/前端面试小册 - 掘金/15性能优化琐碎事.md
+++ b/前端面试小册 - 掘金/15性能优化琐碎事.md
@@ -134,7 +134,7 @@ const debounce = (func, wait = 50) => {
 
 CDN 的原理是尽可能的在各个地方分布机房缓存数据，这样即使我们的根服务器远在国外，在国内的用户也可以通过国内的机房迅速加载资源。
 
-因此，我们可以将静态资源尽量使用 CDN 加载，由于浏览器对于单个域名有并发请求上限，可以考虑使用多个 CDN 域名。并且对于 CDN 加载静态资源需要注意 CDN 域名要与主站不同，否则每次请求都会带上主站的 Cookie，平白消耗流量。
+因此，我们可以将静态资源尽量使用 CDN 加载，由于浏览器对于单个域名有并发请求上限**（Chrome是6个，Safari是4个）**，可以考虑使用多个 CDN 域名。并且对于 CDN 加载静态资源需要注意 CDN 域名要与主站不同，否则每次请求都会带上主站的 Cookie，平白消耗流量。
 
 ## 小结
 
