--- a/算法/算法.md
+++ b/算法/算法.md
@@ -3402,6 +3402,30 @@ let delay = function(sec){
 delay(10000).then(() => console.log('print after ms'))
 ```
 
+#### 33.用 setTimeout 实现 setInterval
+
+```js
+ function mySetInterval() {
+        mySetInterval.timer = setTimeout(() => {
+            arguments[0]()
+            mySetInterval(...arguments)
+        }, arguments[1])
+    }
+
+    mySetInterval.clear = function() {
+        clearTimeout(mySetInterval.timer)
+    }
+
+    mySetInterval(() => {
+        console.log(11111)
+    }, 1000)
+
+    setTimeout(() => {
+        // 5s 后清理
+        mySetInterval.clear()
+    }, 5000)
+```
+
 
 
 
