--- a/算法/算法.md
+++ b/算法/算法.md
@@ -1878,8 +1878,13 @@ Vue 一共有8个生命阶段，分别是创建前、创建后、加载前、加
 
 
 
-
 ## 经典笔试题
+
+### 算法回顾
+
+[算法总结](
+
+)
 
 #### 1. js 实现一个函数，完成超过范围的两个大整数相加功能
    ```js
@@ -2285,8 +2290,32 @@ function throttle(fn, delay){
 
 </script>
 
-
-
+// 节流加强lead
+function throttle(fn,delay,lead){
+    let flag = true
+    return function(...args){
+        if(!flag) return 
+        flag = false
+        let _this = this
+        let timer
+        if(!lead){
+            timer = setTimeout(()=>{
+                fn.apply(_this, [args[0].slice(0,1)])
+                flag = true
+                lead = true
+            },delay)
+        }else{
+            clearTimeout(timer)
+            timer = setTimeout(
+                ()=>{
+                    fn.apply(_this, args)
+                    flag = true
+                }, 
+                delay
+            )
+        }
+    }
+}
 
 
 ```
