--- a/面试记录/面试记录2022.md
+++ b/面试记录/面试记录2022.md
@@ -249,8 +249,6 @@
 
 ### 猿辅导一面 8.03 1h
 
-
-
 1. 自我介绍（没让介绍项目）
 
 2. 学习前端有多久，为什么想做前端
@@ -422,9 +420,43 @@
 
   
 
+### 猿辅导三面 8.13 1h
+
+- 代码题
+
+- ```js
+  //多叉树的构建 与 寻找root node
+  function TreeNode(val){
+      this.val = val    
+      this.children = []   
+  }
+  let test = [[1,2],[1,3],[1,4],[2,5]]
+  let map = {}
+  for(let i in test){
+      let ele = test[i]
+      if(!map[ele[0]]){
+          map[ele[0]] = new TreeNode(ele[0])
+      }
+      if(!map[ele[1]]){
+          map[ele[1]] = new TreeNode(ele[1])
+      } 
+      map[ele[0]].children.push(new TreeNode(ele[1]))
+  }
+  // find root node
+  let rootMap = {}
+  for(let i in test){
+      let ele = test[i]
+      rootMap[ele[0]] = 1
+  }
+  for(let i in test){
+     let ele = test[i]
+     delete rootMap[ele[1]]
+  }
+  console.log(map[Object.keys(rootMap)])
+  console.log(map)
+  ```
+
 ### Tictok global live 一面 8.04 16:00 - 17:00
-
-
 
 - 自我介绍
 
@@ -478,6 +510,38 @@
   }
   let test = '5 + 4 - 3'
   console.log(calcStr(test))
+  ```
+
+  
+
+### Tictok global live 二面 8.12 16:00 - 17:00
+
+- 自我介绍
+
+- 项目介绍
+
+- 难点
+
+- SSR 原理
+
+- Vue 双向绑定
+
+- Vue Router原理
+
+- Router undo设计
+
+- 输出题一
+
+- 智力题：A，B两个玩家， A开始扔硬币，正面赢，反面交给B循环，求A，B的胜率
+
+  ```
+  https://www.nowcoder.com/discuss/501832?channel=-2&source_id=discuss_terminal_discuss_sim
+  ```
+
+- 代码题：给定数组，求大于target的最短子序列
+
+  ```js
+  
   ```
 
   
